--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="manifest.webmanifest">
+  <link rel="stylesheet" href="manifest.json">
   <script src="jquery.js" charset="utf-8"></script>
   <script type="text/javascript" src="main.js"></script>
   <title>Document</title>
