--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta name="Description" content="Author: jordan; Created in may 2018; Home page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
