--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta name="Description" content="Author: jordan; Created in may 2018; Home page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="rgb(245, 240, 237)">
     <meta charset="utf-8">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="manifest.json">
-  <link rel="stylesheet" href="https://jordancrey.github.io/restaurant.com/manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <script src="jquery.js" charset="utf-8"></script>
   <script type="text/javascript" src="main.js"></script>
   <title>Document</title>
