--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="main.css">
   <link rel="manifest" href="/manifest.json">
+
   <script src="jquery.js" charset="utf-8"></script>
   <script type="text/javascript" src="main.js"></script>
   <title>Document</title>
@@ -54,7 +55,7 @@
   <!-- Copyright -->
 
 </footer>
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="sw.js"></script>
   <script type="text/javascript">
           if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
