--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="Description" content="Author: jordan; Created in may 2018; Home page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="theme_color" content="#2F3BA2">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="main.css">
