--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="Description" content="Author: jordan; Created in may 2018; Home page">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
